# docx-locker

./: .bumpversion.cfg  .bumpversion.toml  .flake8  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: bump-version.yml  codeql.yml  docs.yml  python-package.yml  python-publish.yml  python-tests.yml  python-version-bump.yml  release.yml  tests.yml
docx_locker/: __init__.py  docx_locker.py  encrypt.py
py_docx_locker/: __init__.py  docx_locker.py  encrypt.py
tests/: test_docx_locker.py  test_encrypt.py
tests/test_files/: protected.docx  unprotected.docx
