[project]
name = "docx-locker"
0.1.0...0.2.0
description = "Python module for enabling document protection on docx files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml>=5.3.0",
]

[tool.uv]
dev-dependencies = [
    "build>=1.2.2",
    "bump-my-version>=0.26.0",
    "flake8>=7.1.1",
    "pytest>=8.3.3",
]
