[project]
name = "docx-locker"
version = "0.4.0"
description = "Python module for enabling document protection on docx files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml>=5.3.0",
]

[tool.uv]
dev-dependencies = [
    "build>=1.2.2",
    "bump-my-version>=0.26.0",
    "flake8>=7.1.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.coverage.run]
branch = true
omit = ["**/test_*.py", "**/__init__.py"]