[project]
name = "docx-locker"
version = "0.5.0"
description = "Python module for enabling document protection on docx files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lxml>=5.3.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Office/Business :: Office Suites",
]
license = { file = "LICENSE" }
keywords = ["docx", "documentProtection"]

[tool.uv]
dev-dependencies = [
    "build>=1.2.2",
    "bump-my-version>=0.26.0",
    "flake8>=7.1.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[tool.coverage.run]
branch = true
omit = ["**/test_*.py", "**/__init__.py"]